Tue Aug 24 13:52:12 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.7

Tue Aug 24 12:05:29 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: updated reflecting new step, added reminder about 
	  annoying cases to test
	* server/gam_dnotify.c server/gam_poll.c: if a monitored
	  resource generate too much kernel events switch back automatically
	  to polling on that resources, and once things have calmed down
	  go back to kernel monitoring after 10 seconds.

Mon Aug 23 14:48:51 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: updated with fixed stuff and new problems
	* server/gam_poll.c server/gam_server.c: handling of initially
	  missing directories. Try to improve detection of modifications.
	* tests/scenario/8.tst tests/result/8: added a new test

Fri Aug 20 23:31:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: monitoring of files appearing and disapearing
	  should now work as expected.
	* tests/result/7 tests/scenario/7.tst: added a specific test

Thu Aug 19 23:46:13 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c: fix a problem for monitoring missing
	  files
	* tests/result/6 tests/scenario/6.tst: added a regression test
	  for it.

Thu Aug 19 15:38:55 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* Makefile.am configure.in gamin.spec.in: release of 0.0.6
	* doc/gamin-api.xml doc/gamin-refs.xml: rebuilt

Thu Aug 19 14:40:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: fixing dnotify and FAM events sequences when
	  monitoring an existing file.
	* tests/result/5 tests/scenario/5.tst: added a specific test
	* TODO: tests need fixing to avoid paths problems

Thu Aug 19 13:54:36 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_node.h server/gam_server.c
	  server/gam_server.h server/gam_subscription.c: work toward fixing the
	  file dnotify back-end and FAM like-processing
