@@ -1,3 +1,8 @@
+Wed Aug 25 10:19:00 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* server/gam_server.c: applied patch from Martin Schlemmer to
+	  activate the INotify backend if configured in.
+
 Tue Aug 24 13:52:12 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in gamin.spec.in: release of 0.0.7
